added some more information on how to effectively use the sea_level tools

--- a/readme
+++ b/readme
@@ -4,6 +4,9 @@ Evan Gowan's tools relating manipulating and using radiocarbon dates.
 In this top directory, make sure to extract OxCal (download OxCalDistribution.zip from here: https://c14.arch.ox.ac.uk/oxcal.html).
 It will produce a folder called "OxCal". The scripts in these folders depend on OxCal being there!
 
+
+These programs make heavy use of Generic Mapping Tools (http://gmt.soest.hawaii.edu version >= 5). This needs to be installed before you can use anything. You should need to install gfortran.
+
 ----------------------------------
 
 So far there are the following tools:
